# rio

./: .pre-commit-config.yaml  COPYRIGHT  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pr.yml
docs/: index.md  quickstart.md
docs/setup-tutorials/: humanoid.md  ubuntu.md
docs/tutorial/: humanoid.md
docs/workflow/: data-collection.md  data-export.md  deploy.md  index.md  pi0_droid_finetuning.md  pi0_setup.md  rerun.md  station_cfg.md
examples/: teleop_humanoid.py
examples/cfg/: __init__.py  bimanual_yam_station.py  humanoid.py  yam_station.py
examples/data/: convert.py  test_lerobot_formatter.py  test_rlds_formatter.py
rio/_tests/: pi_droid.py  so100_driver.py  test_action_space.py  test_api_contracts.py  test_formatter.py  test_mw.py  test_safety.py  test_teleop.py
rio/cfg/: camera.py  node.py
rio/data/: lerobot_formatter.py  rlds_formatter.py
rio/embodiments/: base.py  bimanual.py  humanoid.py  single_arm.py
rio/envs/: factory.py
rio/policies/: __init__.py  gear_sonic.py  gear_sonic_planner.py  policy_interface.py
scripts/results/: rollout_metrics.py
scripts/setup/humanoid/: gearsonic_setup.sh
